syntax = "proto3";
package ecommerce;

option go_package = "productinfo/service/server/ecommerce";

message ProductID { string value = 1; }

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

service ProductInfo {
  rpc addProduct(Product) returns (ProductID);
  rpc getProduct(ProductID) returns (Product);
}